--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.servicecreate.ui.auth.AuthViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/auth_constraint"
         android:layout_width="match_parent"
@@ -11,12 +17,12 @@
         tools:context=".ui.auth.AuthActivity">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:elevation="1dp"
             android:id="@+id/auth_welcome_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:layout_marginTop="40dp"
+            android:elevation="1dp"
             android:text="@string/auth_welcome_back"
             android:textColor="@color/main_color_primary_secondary"
             android:textSize="20sp"
@@ -25,12 +31,12 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:elevation="1dp"
             android:id="@+id/auth_welcome_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
             android:layout_marginTop="5dp"
+            android:elevation="1dp"
             android:text="@string/auth_welcome_description"
             android:textColor="@color/icon_color"
             android:textSize="15sp"
@@ -39,7 +45,6 @@
             app:layout_constraintTop_toBottomOf="@id/auth_welcome_text" />
 
         <com.google.android.material.tabs.TabLayout
-            android:elevation="1dp"
             android:id="@+id/auth_tablayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,6 +52,7 @@
             android:layout_marginTop="100dp"
             android:background="@drawable/retangle_bg"
             android:backgroundTint="#f4f7ff"
+            android:elevation="1dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/auth_welcome_description"
@@ -62,24 +68,23 @@
             app:tabTextColor="@color/black">
 
             <com.google.android.material.tabs.TabItem
-                android:elevation="1dp"
                 android:id="@+id/auth_tab_login"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:elevation="1dp"
                 android:text="@string/auth_tab1" />
 
             <com.google.android.material.tabs.TabItem
-                android:elevation="1dp"
                 android:id="@+id/auth_tab_register"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="2dp"
+                android:elevation="1dp"
                 android:text="@string/auth_tab2" />
 
         </com.google.android.material.tabs.TabLayout>
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:elevation="1dp"
             android:id="@+id/auth_ed_email"
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -90,18 +95,21 @@
             android:drawableStart="@drawable/ic_outline_email_24"
             android:drawablePadding="10dp"
             android:drawableTint="@color/icon_color"
+            android:elevation="1dp"
             android:fadingEdge="horizontal"
             android:hint="@string/auth_et_email_hint_text"
+            android:text="@={viewModel.email}"
             android:inputType="textEmailAddress"
             android:paddingHorizontal="10dp"
             android:textColor="@color/icon_color"
             android:textCursorDrawable="@color/second_color"
+            app:layout_constraintBottom_toTopOf="@id/auth_ed_confidence"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/auth_tablayout" />
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:elevation="1dp"
+            android:text="@={viewModel.password}"
             android:id="@+id/auth_ed_confidence"
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -112,69 +120,121 @@
             android:drawableStart="@drawable/ic_outline_lock_24"
             android:drawablePadding="10dp"
             android:drawableTint="@color/icon_color"
+            android:elevation="1dp"
             android:fadingEdge="horizontal"
             android:hint="@string/auth_et_confidence_hint_text"
             android:inputType="numberPassword"
             android:paddingHorizontal="10dp"
             android:textColor="@color/icon_color"
             android:textCursorDrawable="@color/second_color"
+            app:layout_constraintBottom_toTopOf="@+id/auth_card"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/auth_ed_email" />
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:elevation="1dp"
-            android:id="@+id/auth_ed_verify"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/auth_card"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginHorizontal="24dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/retangle_bg"
             android:backgroundTint="#f4f7ff"
-            android:drawableStart="@drawable/ic_outline_verified_24"
-            android:drawablePadding="10dp"
-            android:drawableTint="@color/icon_color"
-            android:fadingEdge="horizontal"
-            android:hint="@string/auth_et_verified_hint_text"
-            android:inputType="number"
-            android:paddingHorizontal="10dp"
-            android:textColor="@color/icon_color"
-            android:textCursorDrawable="@color/second_color"
+            android:elevation="1dp"
+            android:orientation="horizontal"
+            android:visibility="gone"
+            app:cardCornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/auth_ed_confidence"
-            android:visibility="gone"
-            tools:visibility="visible"
-            android:animateLayoutChanges="true"/>
+            tools:visibility="visible">
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/auth_ed_phone"
+                    android:text="@={viewModel.phoneNumber}"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4"
+                    android:animateLayoutChanges="true"
+                    android:background="@drawable/retangle_bg"
+                    android:backgroundTint="#f4f7ff"
+                    android:drawableStart="@drawable/ic_outline_phone_android_24"
+                    android:drawablePadding="10dp"
+                    android:drawableTint="@color/icon_color"
+                    android:elevation="1dp"
+                    android:fadingEdge="horizontal"
+                    android:hint="@string/auth_et_phone_hint_text"
+                    android:inputType="phone"
+                    android:paddingHorizontal="10dp"
+                    android:textColor="@color/icon_color"
+                    android:textCursorDrawable="@color/second_color"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:text="@={viewModel.sms}"
+                    android:id="@+id/auth_ed_verify"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4"
+                    android:animateLayoutChanges="true"
+                    android:background="@drawable/retangle_bg"
+                    android:backgroundTint="#f4f7ff"
+                    android:drawableStart="@drawable/ic_outline_verified_24"
+                    android:drawablePadding="10dp"
+                    android:drawableTint="@color/icon_color"
+                    android:fadingEdge="horizontal"
+                    android:hint="@string/auth_et_verified_hint_text"
+                    android:inputType="number"
+                    android:paddingHorizontal="10dp"
+                    android:textColor="@color/icon_color"
+                    android:textCursorDrawable="@color/second_color" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/auth_bt_send_code"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/retangle_bg"
+                    android:shadowColor="@color/main_color_primary_variant"
+                    android:text="@string/auth_bt_send" />
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+        </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.button.MaterialButton
-            android:shadowColor="@color/main_color_primary_variant"
-            android:background="@drawable/retangle_bg"
             android:id="@+id/auth_bt_login"
-            android:textSize="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="23dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="35dp"
             android:height="60dp"
+            android:animateLayoutChanges="true"
+            android:background="@drawable/retangle_bg"
+            android:shadowColor="@color/main_color_primary_variant"
             android:text="@string/auth_tab1"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/auth_ed_verify"
-            android:animateLayoutChanges="true"/>
+            app:layout_constraintTop_toBottomOf="@id/auth_card" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="40dp"
             android:id="@+id/auth_change"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:gravity="center_horizontal"
             android:text="用户协议"
             android:textColor="@color/main_color_primary_secondary"
-            android:gravity="center_horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
