setting ui complete 0

--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:layout_marginTop="40dp"
-            android:elevation="1dp"
+            android:elevation="@dimen/ui_elevation_height"
             android:text="@string/auth_welcome_back"
             android:textColor="@color/main_color_primary_secondary"
             android:textSize="20sp"
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
             android:layout_marginTop="5dp"
-            android:elevation="1dp"
+            android:elevation="@dimen/ui_elevation_height"
             android:text="@string/auth_welcome_description"
             android:textColor="@color/icon_color"
             android:textSize="15sp"
@@ -52,7 +52,7 @@
             android:layout_marginTop="100dp"
             android:background="@drawable/retangle_bg"
             android:backgroundTint="#f4f7ff"
-            android:elevation="1dp"
+            android:elevation="@dimen/ui_elevation_height"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/auth_welcome_description"
@@ -71,7 +71,7 @@
                 android:id="@+id/auth_tab_login"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:elevation="1dp"
+                android:elevation="@dimen/ui_elevation_height"
                 android:text="@string/auth_tab1" />
 
             <com.google.android.material.tabs.TabItem
@@ -79,7 +79,7 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="2dp"
-                android:elevation="1dp"
+                android:elevation="@dimen/ui_elevation_height"
                 android:text="@string/auth_tab2" />
 
         </com.google.android.material.tabs.TabLayout>
@@ -95,7 +95,7 @@
             android:drawableStart="@drawable/ic_outline_email_24"
             android:drawablePadding="10dp"
             android:drawableTint="@color/icon_color"
-            android:elevation="1dp"
+            android:elevation="@dimen/ui_elevation_height"
             android:fadingEdge="horizontal"
             android:hint="@string/auth_et_email_hint_text"
             android:text="@={viewModel.email}"
@@ -120,7 +120,7 @@
             android:drawableStart="@drawable/ic_outline_lock_24"
             android:drawablePadding="10dp"
             android:drawableTint="@color/icon_color"
-            android:elevation="1dp"
+            android:elevation="@dimen/ui_elevation_height"
             android:fadingEdge="horizontal"
             android:hint="@string/auth_et_confidence_hint_text"
             android:inputType="numberPassword"
@@ -139,7 +139,7 @@
             android:layout_marginHorizontal="24dp"
             android:layout_marginTop="20dp"
             android:backgroundTint="#f4f7ff"
-            android:elevation="1dp"
+            android:elevation="@dimen/ui_elevation_height"
             android:orientation="horizontal"
             android:visibility="gone"
             app:cardCornerRadius="10dp"
@@ -165,7 +165,7 @@
                     android:drawableStart="@drawable/ic_outline_phone_android_24"
                     android:drawablePadding="10dp"
                     android:drawableTint="@color/icon_color"
-                    android:elevation="1dp"
+                    android:elevation="@dimen/ui_elevation_height"
                     android:fadingEdge="horizontal"
                     android:hint="@string/auth_et_phone_hint_text"
                     android:inputType="phone"
