--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,20 +37,23 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:elevation="1dp"
+                    <com.google.android.material.imageview.ShapeableImageView
                         android:id="@+id/home_icon"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
                         android:layout_gravity="center_vertical"
                         android:layout_marginStart="30dp"
                         android:layout_marginTop="10dp"
+                        android:elevation="@dimen/ui_elevation_height"
+                        android:scaleType="centerCrop"
                         android:src="@drawable/icon"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:shapeAppearance="@style/CircleStyle"
+                        app:strokeColor="@color/white"
+                        app:strokeWidth="1dp" />
 
                     <ImageButton
-                        android:elevation="1dp"
                         android:id="@+id/home_notification"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
@@ -59,6 +62,7 @@
                         android:layout_marginEnd="35dp"
                         android:background="@drawable/circle_bg"
                         android:contentDescription="To jump to notification page"
+                        android:elevation="@dimen/ui_elevation_height"
                         android:src="@drawable/ic_outline_notifications_active_24"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -88,7 +92,7 @@
                     android:layout_marginHorizontal="20dp"
                     app:cardBackgroundColor="@color/main_color"
                     app:cardCornerRadius="15dp"
-                    app:cardElevation="1dp"
+                    app:cardElevation="@dimen/ui_elevation_height"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/home_appbar">
@@ -96,6 +100,7 @@
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:elevation="@dimen/ui_elevation_height"
                         android:orientation="vertical">
 
                         <RelativeLayout
@@ -158,14 +163,14 @@
                 </androidx.cardview.widget.CardView>
 
                 <com.google.android.material.tabs.TabLayout
-                    android:elevation="1dp"
                     android:id="@+id/home_tablayout"
                     android:layout_width="170dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:paddingHorizontal="2dp"
                     android:background="@drawable/circle_retangle_bg"
                     android:backgroundTint="@color/white"
+                    android:elevation="@dimen/ui_elevation_height"
+                    android:paddingHorizontal="2dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/home_cardView"
@@ -199,9 +204,9 @@
                     android:id="@+id/home_recyclerview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingBottom="56dp"
-                    android:paddingTop="20dp"
                     android:paddingHorizontal="15dp"
+                    android:paddingTop="20dp"
+                    android:paddingBottom="56dp"
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
