--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -189,12 +189,14 @@
                         android:id="@+id/home_tab_rooms"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:elevation="@dimen/ui_elevation_height"
                         android:text="@string/home_tab1" />
 
                     <com.google.android.material.tabs.TabItem
                         android:id="@+id/home_tab_devices"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:elevation="@dimen/ui_elevation_height"
                         android:layout_marginEnd="2dp"
                         android:text="@string/home_tab2" />
 
