light fragment ui 0

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
             android:backgroundTint="@color/white"
             android:outlineProvider="none"
             app:fabCradleMargin="10dp"
+            app:fabAlignmentMode="center"
             app:hideOnScroll="false">
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
