--- a/app/src/main/res/layout/activity_controller.xml
+++ b/app/src/main/res/layout/activity_controller.xml
@@ -28,8 +28,10 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/controller_container_fragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/controller_toolbar"/>
+            android:layout_height="match_parent"
+            android:layout_marginTop="56dp"
+            app:layout_constraintTop_toBottomOf="@id/controller_toolbar"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
