--- a/app/src/main/res/layout/fragment_air_condition.xml
+++ b/app/src/main/res/layout/fragment_air_condition.xml
@@ -47,7 +47,7 @@
                     app:strokeWidth="1dp" />
 
                 <TextView
-                    android:id="@+id/controller_device_name"
+                    android:id="@+id/air_device_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
@@ -60,7 +60,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/controller_device_room"
+                    android:id="@+id/air_device_room"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
@@ -69,10 +69,10 @@
                     android:textColor="@color/icon_color"
                     android:textSize="15sp"
                     app:layout_constraintStart_toEndOf="@id/air_icon"
-                    app:layout_constraintTop_toBottomOf="@id/controller_device_name" />
+                    app:layout_constraintTop_toBottomOf="@id/air_device_name" />
 
                 <androidx.appcompat.widget.SwitchCompat
-                    android:id="@+id/item_card_room_switch"
+                    android:id="@+id/air_switch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="13dp"
