--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,9 +26,9 @@
     </style>
 
     <!--实现BottomSheetDialog圆角效果 且无背景阴影-->
-    <style name="BottomSheetDialogBg" parent="Theme.Design.Light.BottomSheetDialog">
+    <style name="BottomSheetDialogBg" parent="Theme.Material3.Light.BottomSheetDialog">
         <item name="bottomSheetStyle">@style/bottomSheetStyleWrapper</item>
-        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
     </style>
 
     <style name="bottomSheetStyleWrapper" parent="Widget.Design.BottomSheet.Modal">
