--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -68,6 +68,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
+                        android:marqueeRepeatLimit="marquee_forever"
                         android:id="@+id/home_username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
